--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "simple mongo setup",
   "main": "app.js",
   "scripts": {
-    "test": "npm start"
+    "test": "npm start",
+    "start": "nodemon app.js"
   },
   "author": "vishal sharma",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
     "mongodb": "^3.3.0-beta2",
-    "mongoose": "^5.6.6"
+    "mongoose": "^5.6.6",
+    "nodemon": "^2.0.4"
   }
 }
