--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "vishal sharma",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongodb": "^3.3.0-beta2",
     "mongoose": "^5.6.6",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "path": "^0.12.7"
   }
 }
